syntax = "proto3";

package protobuf;

import "LockAndExitConfig.proto";
import "MessageConfig.proto";
import "ApiConfig.proto";
import "OrdersConfig.proto";
import "UpdateConfigWarning.proto";

option go_package = ".;protobuf";

message UpdateConfigRequest {
    optional int32 reqId = 1;
    optional LockAndExitConfig lockAndExit = 2;
    repeated MessageConfig messages = 3;
    optional ApiConfig api = 4;
    optional OrdersConfig orders = 5;
    repeated UpdateConfigWarning acceptedWarnings = 6;
    optional bool resetAPIOrderSequence = 7;
}